[package]
name = "zenoh-flat-c"
version = "1.9.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
prebindgen = { path = "/Users/milyin/prebindgen/prebindgen" }
zenoh-flat = { path = "../zenoh-flat" }
konst = "0.3.0"

[build-dependencies]
prebindgen = { path = "/Users/milyin/prebindgen/prebindgen" }
zenoh-flat = { path = "../zenoh-flat" }
cbindgen = "0.29.0"
syn = { version = "2.0", features = ["full"] }
